{
    "name": "PlayerTriggers",
    "maps": [
        {
            "name": "DummyPlayer",
            "id": "fe89531a-2f86-4e7c-a1b1-9e2df4fa7c3d",
            "actions": [
                {
                    "name": "HideTest",
                    "type": "Button",
                    "id": "8b4a2c18-967c-4cb2-8fbb-4b10cc781604",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d457a8c8-9c7c-4ad5-b0ff-4de993e1a034",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HideTest",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "18ea6966-a0b4-4daf-935e-6aa690b7e811",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HideTest",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}